# fastapi-with-redis

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.ini  gunicorn_config.py  logging.conf  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py  main.py
app/authentication/: api_key_auth.py  api_key_authenticator.py  api_key_manipulation.py  authenticate.py  dummy_api_authenticator.py
app/authentication/api_usage/: api_usage_incrementor.py  redis_api_usage_incrementor.py
app/authentication/authenticator/: api_key_authenticator.py  dummy_api_authenticator.py
app/cache_server/: connector.py  server_client.py
app/cache_server/redis/: redis_connector.py  redis_server.py  redis_server_client.py
app/exception/: authentication_exception.py  base_exception.py  exception_handlers.py  messages.py  service_exception.py
app/routers/: health.py  process_pdf.py
app/service/: pdf_processor_service.py
app/utils/: config_parser.py
tests/unittests/authentication/: test_dummy_authenticator.py
tests/unittests/authentication/api_usage/: test_redis_api_usage_incrementor.py
