[tool.poetry]
name = "fastapi-with-redis"
version = "0.1.0"
description = ""
authors = ["jabertuhin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
gunicorn = "^20.1.0"
uvicorn = "^0.14.0"
aioredis = "1.3.1"
configparser = "^5.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
